--- a/index.html
+++ b/index.html
@@ -5,16 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Donut Clicker</title>
+    <title>Donut Maker Factory</title>
   </head>
   <body class="container">
     <header class="header">
-      <h1>Donut Maker Clicker</h1>
+      <h1>Donut Maker Factory</h1>
       <nav>
         <ul class="navbar">
-          <li><h1>About</h1></li>
-          <li><h1>Inspiration</h1></li>
-          <li><h1>Contact</h1></li>
+          <li>
+            <div class="dropdown" id="dropDown1">
+              <button id="aboutBtn" onclick="dropIt">
+                <a id="dpLink1" href="#dp-container1"
+                  >About Us
+                  <img
+                    class="dropdown-img"
+                    src="images/down-arrow.png"
+                    alt="Dropdown arrow icons created by CreativeCons - Flaticon"
+                    srcset=""
+                  />
+                </a>
+              </button>
+              <div id="dp-container1" class="content">
+                <p>
+                  This is the Donut Maker Factory, welcome! Our production is
+                  currently lagging, and we need your assistance. Click the
+                  donut to help us produce more Donut.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="dropdown" id="dropDown2">
+              <button id="inspirationBtn" onclick="dropIt">
+                <a id="dpLink2" href="#dp-container2"
+                  >Inspiration
+                  <img
+                    class="dropdown-img"
+                    src="images/down-arrow.png"
+                    alt="Dropdown arrow icons created by CreativeCons - Flaticon"
+                    srcset=""
+                /></a>
+              </button>
+              <div id="dp-container2" class="content">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://orteil.dashnet.org/cookieclicker/"
+                  >Cookie Clicker</a
+                >
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="dropdown">
+              <button id="aboutMeBtn" onclick="dropIt">
+                <a id="dpLink4" href="#dp-container3"
+                  >About Me
+                  <img
+                    class="dropdown-img"
+                    src="images/down-arrow.png"
+                    alt="Dropdown arrow icons created by CreativeCons - Flaticon"
+                    srcset=""
+                /></a>
+              </button>
+              <div id="dp-container3" class="content">
+                <p>
+                  I'm a Full-Stack Developer that wanting to make a game similar
+                  to Cookie Clicker.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="dropdown">
+              <button id="contactBtn" onclick="dropIt">
+                <a id="dpLink3" href="#dp-container4"
+                  >Contact
+                  <img
+                    class="dropdown-img"
+                    src="images/down-arrow.png"
+                    alt="Dropdown arrow icons created by CreativeCons - Flaticon"
+                    srcset=""
+                /></a>
+              </button>
+              <div id="dp-container4" class="content">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/Jobari24?tab=repositories"
+                  >My GitHub</a
+                >
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="mailto:JobariJackson24@gmail.com"
+                  >Email Me!</a
+                >
+                <a
+                  href="www.linkedin.com/in/jobari-jackson-48884b279
+                "
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Linkedin</a
+                >
+              </div>
+            </div>
+          </li>
         </ul>
       </nav>
     </header>
